# mcp-word-office

./: .coverage  .gitignore  CHANGELOG.md  DEPLOYMENT_FIXED.md  LICENSE  MANIFEST.in  README.md  config.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_claude_integration.py  test_mac_word.py  test_mcp_connection.py  test_mcp_simple.py  word_mcp_server_mac.py  word_mcp_server_simple.py
.github/workflows/: ci.yml  release.yml
.kiro/settings/: mcp.json
.kiro/specs/word-office-mcp-server/: design.md  requirements.md  tasks.md
docs/: API_REFERENCE.md  CLAUDE_INTEGRATION.md  DEPLOYMENT.md  INSTALLATION.md  PACKAGING.md  TROUBLESHOOTING.md
examples/: __init__.py  advanced_document_features.py  basic_document_operations.py
scripts/: build.py  release.py  test_environments.py  test_installation.py
tests/: test_config_manager.py  test_document_manager.py  test_error_handling.py  test_mcp_server.py  test_server_lifecycle.py  test_table_list_operations.py  test_word_controller.py
tests/fixtures/: __init__.py  document_fixtures.py
tests/integration/: __init__.py  test_concurrent_operations.py  test_end_to_end.py  test_performance.py
word_mcp_server/: __init__.py  __main__.py  main.py
word_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
word_mcp_server/config/: __init__.py  config_manager.py  models.py
word_mcp_server/server/: __init__.py  mcp_server.py
word_mcp_server/utils/: __init__.py  errors.py  logging.py  recovery.py  setup.py  validators.py
word_mcp_server/word/: __init__.py  controller.py  document_manager.py
